# Obliviator

./: .gitignore  README.md  main.py  pyproject.toml
configs/: data_links.toml  data_loader.py  defaults.py  experiment_factory.py  factory.py  loader.py  main.yaml  process.py  schemas.py  user.py  user_defined.py
configs/common/encoder/: eraser.yaml  probe.yaml
data/: data_links.toml
evaluation/: fairness.py  probing.py
src/obliviator/: __init__.py  base.py  schemas.py  supervised.py  unsupervised.py
src/obliviator/models/: core.py
src/obliviator/utils/: classifier.py  data.py  dataloader.py  kernel.py  linalg.py  misc.py
